fixed app background look on mobile device

--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,9 @@
   height: 100%;
 }
 
+@media only screen and (max-width: 600px) {
+  .App {
+    height: auto;
+  }
+}
+
